--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": //{
+    //"test": "echo \"Error: no test specified\" && exit 1"
+  //},
+  {
+                        "start" : "node bot.js"
+                      },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ndkane/emojifortunes.git"
