Reverted to previous package.json file

--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "bot.js",
-  "scripts": //{
-    //"test": "echo \"Error: no test specified\" && exit 1"
-  //},
-  {
-                        "start" : "node bot.js"
-                      },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ndkane/emojifortunes.git"
